--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,19 +12,18 @@ android {
 
     }
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
     defaultConfig {
         vectorDrawables {
             useSupportLibrary = true
 
         }
-        vectorDrawables.useSupportLibrary = true
 
-        applicationId "com.heavymetal.giphy"
+
+        applicationId "com.heavymetal.giphymetal"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
 
@@ -61,16 +60,16 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.leo.simplearcloader:simplearcloader:1.0.+'
     implementation 'com.github.GrenderG:Toasty:1.2.5'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
-    implementation 'com.google.firebase:firebase-core:11.8.0'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
-    implementation 'com.google.firebase:firebase-ads:11.8.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-ads:17.0.0'
     implementation 'com.anjlab.android.iab.v3:library:1.0.44'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.github.shalskar:PeekAndPop:1.1.0'
